--- a/dev/distanceMatrix2.html
+++ b/dev/distanceMatrix2.html
@@ -150,15 +150,10 @@
       });
 
       Vue.component("attraction-item", {
-        data() {
-          return {
-            img: this.label.Picture1,
-          };
-        },
         template: `
         <card class="card align-top m-2 p-2 d-inline-block shadow-sm" style="width: 12rem;height:14rem;">
-                <img :src='img' class="card-img-top"/>
-                <h6 class="card-title">{{label.Name}}</h6>
+                <img :src='this.label.Picture1' class="card-img-top"/>
+                <h6 class="card-title text-truncate">{{label.Name}}</h6>
                 <button @click="sendSelectedAttractionToAttractionApi" type="button" class="btn btn-outline-success btn-block w-50">加入行程</button>
         </card>
                 `,
