--- a/dev/htmlTemplate/SpotLightBox.html
+++ b/dev/htmlTemplate/SpotLightBox.html
@@ -1,22 +1,24 @@
 <div class="spotLightBox">
-  <div class="closedBtn" onclick="closespotLightBox();"><img src="./images/icon/cross_b.png" alt="關閉"></div>
+  <!-- <div  class="closedBtn" onclick="closespotLightBox();"><img src="./images/icon/cross_b.png" alt="關閉"></div> -->
+  <div  class="closedBtn" onclick="closespotLightBox();"><img src="./images/icon/cross_b.png" alt="關閉"></div>
   <div class="spotLightBoxImg">
-    <img src="./images/area/Changhua.jpg" >
+    <!-- <img src="./images/area/Changhua.jpg" > -->
+    <img :src="QueryCards.Attrac_PicURL" >  
   </div>
   <div class="spotLightBox1stCol">
-    <div>台北</div>
+    <div>{{QueryCards.Attrac_Region}}</div>
     <div class="starForHot">
       <div ><img src="./images/star_fill.png"></div>
       <div ><img src="./images/star_fill.png"></div>
       <div ><img src="./images/star_half.png"></div>
-
+      {{QueryCards.LikeAttrac}}
     </div>
   </div>
-  <div class="spotName">八卦山</div>
+  <div class="spotName">{{QueryCards.Attrac_Name}}</div>
   <div class="spotContent">
-    <div>營業時間：平日 9:00~16:30</div>
-    <div>電話：0800-030-925</div>
-    <div>地址：桃園市中壢區中大路300號</div>
+    <div>{{QueryCards.Attrac_Open}}</div>
+    <div>電話：{{QueryCards.Attrac_Tel}}</div>
+    <div>地址：{{QueryCards.Attrac_Addre}}</div>
   </div>
   <a class="heartimg" onclick="keepSpotLike(this);"><img src="./images/heart.png" ></a>
 </div>
