--- a/dev/member.html
+++ b/dev/member.html
@@ -12,16 +12,41 @@
   </body>
   <script src="./js/member.js"></script>
   <script>
-    
-    let spotLightBox = document.getElementById("spotLightBox");
-    function openSpotLightBox(){
-      spotLightBox.style.display = "block";
-    };
-    function closespotLightBox(){
-      console.log(spotLightBox);
-      spotLightBox.style.display = "none";
-
-    }
+    // new Vue({
+    //         el: '#oneSpotCard', 
+    //         data: {      
+    //             QueryCards:{},
+    //         },
+    //     })
+    // function openSpotLightBox(obj){
+    //   spotLightBox.style.display = "block";
+    //   let mySpotName = obj.dataset.id;
+    //   console.log(mySpotName);
+    //   let keepSpotInfo = {
+    //     Spot_Id:mySpotName
+    //   };
+    //   //先ajax 後vue 
+    //   let xhr = new XMLHttpRequest();
+    //   xhr.open("post", "./openQueryCards.php", true);
+    //   xhr.setRequestHeader("content-type","application/x-www-form-urlencoded");
+    //   //把資料往後傳
+    //   xhr.send("keepSpotInfo=" + JSON.stringify(keepSpotInfo));   
+    //   xhr.onload = function(){
+    //     if(xhr.status==200){
+    //         console.log(xhr.responseText);
+    //         QueryCards = JSON.parse(xhr.responseText);
+    //         console.log(QueryCards);
+    //         new Vue({
+    //                 el: '#oneSpotCard', 
+    //                 data: {      
+    //                     QueryCards:{},
+    //                 },
+    //             })
+    //     }else{
+    //       alert(xhr.status);
+    //     }
+    //   }
+    // }
   </script>
 
 </html>
